fix: overflow css

--- a/app/assets/stylesheets/mixins/_sticky-footer.css.scss
+++ b/app/assets/stylesheets/mixins/_sticky-footer.css.scss
@@ -9,7 +9,7 @@
     min-height: 100%;
   }
   #main {
-    overflow: auto;
+    overflow: visible;
     padding-bottom: 145px;
     padding-top: 64px;
   }
